<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_my_reservations"
        android:icon="@drawable/ic_card"
        android:title="@string/nav_my_reservations" />
    <item
        android:id="@+id/nav_preferences"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_preferences" />
    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/nav_help" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
